# ofxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ofx160.dtd
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  docs.yml
src/: error.rs  lib.rs
src/body/: mod.rs
src/header/: mod.rs
tests/: integration_test.rs
tests/files/: citi.ofx  simple.ofx
tests/files/ofx-reader/: extrato.ofx
tests/files/sgmlish/: example.ofx
