[package]
name = "ofxy"
version = "0.1.1"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2024"
description = "Parse OFX files"
repository = "https://github.com/n8henrie/ofxy"

[dependencies]
chrono = { version = "0.4", features = ["serde"], default-features = false }
isolang = { version = "2", features = ["lowercase_names", "serde"] }
rust_decimal = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
sgmlish = "0.2"
thiserror = "2"
tracing = "0.1"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
chardetng = "0.1"
encoding_rs = "0.8"
